# secure-encrypted-notepad

./: -  .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  LICENSE  README.md  __center_layout.py  __fix.py  __replace.py  __safe_center.py  __test_layout.py  build.rs  config.toml  debug_output.txt  debug_output2.txt  todo.md
.agents/rules/: main.md
.cargo/: config.toml
.github/actions/linux-deps/: action.yml
.github/workflows/: pipeline.yml  release.yml  tests.yml
crates/sen-android/: Cargo.toml
crates/sen-android/android/: .gitignore  settings.gradle
crates/sen-android/android/app/: build.gradle
crates/sen-android/android/app/src/main/: AndroidManifest.xml
crates/sen-android/android/app/src/main/java/com/sen/android/: MainActivity.kt
crates/sen-android/android/app/src/main/res/values/: styles.xml
crates/sen-android/src/: android_fs.rs  icons.rs  lib.rs
crates/sen-core/: Cargo.toml
crates/sen-core/src/: config_crypto.rs  crypto.rs  fs.rs  history.rs  lib.rs  models.rs  settings.rs  theme.rs  theme_egui.rs  ui.rs
crates/sen-core/themes/: dark.toml  light.toml
crates/sen-desktop/: Cargo.toml  build.rs
crates/sen-desktop/locales/: en.yml  es.yml  ru.yml
crates/sen-desktop/src/: app.rs  app_actions.rs  app_helpers.rs  app_state.rs  desktop_fs.rs  fonts.rs  icons.rs  main.rs  single_instance.rs  theme.rs  theme_ext.rs  ui_batch.rs  ui_dialogs.rs  ui_editor.rs  ui_panels.rs  ui_search.rs  ui_toolbar.rs
crates/sen-i18n/: Cargo.toml  expanded.rs
crates/sen-i18n/locales/: ar.yml  cz.yml  de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  nl.yml  pl.yml  pt-BR.yml  ru.yml  sk.yml  uk.yml  zh-CN.yml
crates/sen-i18n/src/: lib.rs
crates/sen-translations/: Cargo.toml
crates/sen-translations/locales/: ar.yml  cz.yml  de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  nl.yml  pl.yml  pt-BR.yml  ru.yml  sk.yml  uk.yml  zh-CN.yml
crates/sen-translations/src/: lib.rs
docs/: development.md  encryption_architecture.md  not_planned.md  roadmap.md  todo.md
docs/plans/: android_app.md  android_implementation_plan.md  cargo_workspace_refactoring.md  launch_plan.md  stealth_mode_proposal.md
locales/: ar.yml  cz.yml  de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  nl.yml  pl.yml  pt-BR.yml  ru.yml  sk.yml  uk.yml  zh-CN.yml
scripts/: README.md  i18n-sync.ts  locales-cleanup.ts  locales-sync.ts  package.json
src/: app.rs  app_actions.rs  app_helpers.rs  app_state.rs  config_crypto.rs  crypto.rs  fonts.rs  history.rs  icons.rs  main.rs  settings.rs  single_instance.rs  theme.rs  ui_batch.rs  ui_dialogs.rs  ui_editor.rs  ui_panels.rs  ui_search.rs  ui_toolbar.rs
