[package]
name = "sen"
version = "0.4.2"
edition = "2021"
authors = ["Dawid Wasowski"]
description = "Secure Encrypted Notepad with keyfile-only auth"

[dependencies]
# GUI Framework
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }

# SVG support
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# Cryptography
orion = "0.17"
aes-gcm = "0.10"

# File dialogs
rfd = "0.15"

# SHA-256 hashing
sha2 = "0.10"

# Random number generation
rand = "0.8"

# Secure memory zeroing
zeroize = { version = "1.8", features = ["derive"] }

# Settings persistence and theme system
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Timestamps for version control
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for embedded history
base64 = "0.22"

font-kit = "0.14"
keyring = "3"
hex = "0.4"

# ============================================================================
# BUILD PROFILES - Zoptymalizowane dla szybkości kompilacji
# ============================================================================

[profile.dev]
opt-level = 1              # Lekka optymalizacja (szybsza kompilacja + lepsza wydajność)
debug = true               # Debug symbols
split-debuginfo = "unpacked"  # Windows - przyspiesza linking
incremental = true         # Kompilacja inkrementalna

# Optymalizuj zależności raz (nie przebudowują się)
[profile.dev.package."*"]
opt-level = 3              # Pełna optymalizacja dla bibliotek
debug = false              # Bez debug symbols dla zależności

# ============================================================================
# RELEASE - Zbalansowany (szybki build + dobra wydajność)
# ============================================================================
[profile.release]
opt-level = 3              # Pełna optymalizacja
lto = "thin"               # ✅ Thin LTO zamiast full (3-5x szybciej!)
codegen-units = 16         # ✅ Równoległość (16 zamiast 1!)
strip = true               # Usuń debug info
panic = "abort"            # Mniejszy binary
incremental = true         # ✅ NOWE: Incremental dla release

# ============================================================================
# RELEASE FINAL - Tylko dla publikacji (najwolniejszy, ale najmniejszy binary)
# Użyj: cargo build --profile release-final
# ============================================================================
[profile.release-final]
inherits = "release"
opt-level = "z"            # Optymalizacja pod rozmiar
lto = true                 # Full LTO (wolne, ale mały plik)
codegen-units = 1          # Bez równoległości (wolne)
strip = true
panic = "abort"
