[workspace]
members = ["crates/sen-core", "crates/sen-desktop", "crates/sen-i18n", "crates/sen-android"]
resolver = "2"

# ============================================================================
# WORKSPACE DEPENDENCIES — shared version pins
# ============================================================================
[workspace.dependencies]
# Cryptography
orion = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"

# Random number generation
rand = "0.9"

# Secure memory zeroing
zeroize = { version = "1.8", features = ["derive"] }

# Serialization & persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Config/data directories
dirs = "5.0"

# OS keyring
keyring = "3"

# Locale detection
sys-locale = "0.3"

# GUI Framework
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }

# SVG support
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"

# File dialogs
rfd = "0.16"

# Internationalization
rust-i18n = "3"

# Font detection
font-kit = "0.14"

# File watching
notify = "8.0"

# Windows API
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_IO",
] }

# ============================================================================
# BUILD PROFILES — Optimized for compilation speed
# ============================================================================

[profile.dev]
opt-level = 1              # Light optimization (faster build + better performance)
debug = true               # Debug symbols
split-debuginfo = "unpacked"  # Windows - speeds up linking
incremental = true         # Incremental compilation

# Optimize dependencies once (they don't rebuild)
[profile.dev.package."*"]
opt-level = 3              # Full optimization for libraries
debug = false              # No debug symbols for dependencies

# ============================================================================
# RELEASE - Balanced (fast build + good performance)
# ============================================================================
[profile.release]
opt-level = 3              # Full optimization
lto = "thin"               # ✅ Thin LTO instead of full (3-5x faster!)
codegen-units = 16         # ✅ Parallelism (16 instead of 1!)
strip = true               # Remove debug info
panic = "abort"            # Smaller binary
incremental = true         # ✅ NEW: Incremental for release

# ============================================================================
# RELEASE FINAL - For publication only (slowest build, but smallest binary)
# Use: cargo build --profile release-final
# ============================================================================
[profile.release-final]
inherits = "release"
opt-level = "z"            # Optimize for size
lto = true                 # Full LTO (slow, but small file)
codegen-units = 1          # No parallelism (slow)
strip = true
panic = "abort"
