[package]
name = "sen-android"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Android target for Secure Encrypted Notepad"
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
apk_name = "sen"

[dependencies]
# Core library
sen-core = { path = "../sen-core", features = ["egui"] }
sen-i18n = { path = "../sen-i18n" }

# GUI Framework
eframe = { workspace = true, features = ["android-game-activity"] }
egui = { workspace = true }
egui_extras = { workspace = true }

# SVG support
resvg = { workspace = true }
usvg = { workspace = true }
tiny-skia = { workspace = true }

# Native Android
android-activity = { version = "0.6.0", features = ["game-activity"] }
jni = "0.21"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
