[package]
name = "sen-core"
version = "0.7.0"
edition = "2021"
authors = ["Dawid Wasowski"]
description = "Core logic for Secure Encrypted Notepad — cryptography, settings, history"
license = "MIT"

[dependencies]
# Cryptography
orion = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }

# Random number generation
rand = { workspace = true }

# Secure memory zeroing
zeroize = { workspace = true }

# Serialization & persistence
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Timestamps
chrono = { workspace = true }

# Config/data directories
dirs = { workspace = true }

# OS keyring
keyring = { workspace = true }

# Locale detection
sys-locale = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
